fixed collection card width on mobile

--- a/src/screens/Account/src/Components/EmptyGenesisCard/_emptygenesiscard.scss
+++ b/src/screens/Account/src/Components/EmptyGenesisCard/_emptygenesiscard.scss
@@ -15,8 +15,8 @@
     // max-width: 250px;
   }
   @media screen and (max-width: 375px) {
-    min-width: 330px;
-    // max-width: 400px;
+    min-width: 300px;
+    max-width: 300px;
   }
 }
 
@@ -38,8 +38,8 @@
     // max-width: 250px;
   }
   @media screen and (max-width: 375px) {
-    min-width: 330px;
-    // max-width: 400px;
+    min-width: 300px;
+    max-width: 300px;
   }
 }
 
